Added regression algorithms

--- a/src/preprocessing.ipynb
+++ b/src/preprocessing.ipynb
@@ -151,13 +151,13 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# We will extract top 3 actors, comapanies, and director"
+    "# We will extract top 2 actors, top 2 comapanies, and director"
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "source": [
     "def get_director(crew):\n",
     "    for director in crew:\n",
@@ -198,263 +198,7 @@
     "prepared_data.to_csv('../data/preprocessed_data_3.csv', index=False)\n",
     "# prepared_data.head()"
    ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "   adult    budget                                             genres     id  \\\n",
-       "0  False  30000000  [{'id': 16, 'name': 'Animation'}, {'id': 35, '...    862   \n",
-       "1  False  65000000  [{'id': 12, 'name': 'Adventure'}, {'id': 14, '...   8844   \n",
-       "2  False         0  [{'id': 10749, 'name': 'Romance'}, {'id': 35, ...  15602   \n",
-       "3  False  16000000  [{'id': 35, 'name': 'Comedy'}, {'id': 18, 'nam...  31357   \n",
-       "4  False         0                     [{'id': 35, 'name': 'Comedy'}]  11862   \n",
-       "\n",
-       "   imdb_id original_language  \\\n",
-       "0   114709                en   \n",
-       "1   113497                en   \n",
-       "2   113228                en   \n",
-       "3   114885                en   \n",
-       "4   113041                en   \n",
-       "\n",
-       "                                            overview  popularity  \\\n",
-       "0  Led by Woody, Andy's toys live happily in his ...   21.946943   \n",
-       "1  When siblings Judy and Peter discover an encha...   17.015539   \n",
-       "2  A family wedding reignites the ancient feud be...   11.712900   \n",
-       "3  Cheated on, mistreated and stepped on, the wom...    3.859495   \n",
-       "4  Just when George Banks has recovered from his ...    8.387519   \n",
-       "\n",
-       "                                production_companies  \\\n",
-       "0     [{'name': 'Pixar Animation Studios', 'id': 3}]   \n",
-       "1  [{'name': 'TriStar Pictures', 'id': 559}, {'na...   \n",
-       "2  [{'name': 'Warner Bros.', 'id': 6194}, {'name'...   \n",
-       "3  [{'name': 'Twentieth Century Fox Film Corporat...   \n",
-       "4  [{'name': 'Sandollar Productions', 'id': 5842}...   \n",
-       "\n",
-       "                                production_countries  ... vote_count  \\\n",
-       "0  [{'iso_3166_1': 'US', 'name': 'United States o...  ...     5415.0   \n",
-       "1  [{'iso_3166_1': 'US', 'name': 'United States o...  ...     2413.0   \n",
-       "2  [{'iso_3166_1': 'US', 'name': 'United States o...  ...       92.0   \n",
-       "3  [{'iso_3166_1': 'US', 'name': 'United States o...  ...       34.0   \n",
-       "4  [{'iso_3166_1': 'US', 'name': 'United States o...  ...      173.0   \n",
-       "\n",
-       "                                                cast  \\\n",
-       "0  [{'cast_id': 14, 'character': 'Woody (voice)',...   \n",
-       "1  [{'cast_id': 1, 'character': 'Alan Parrish', '...   \n",
-       "2  [{'cast_id': 2, 'character': 'Max Goldman', 'c...   \n",
-       "3  [{'cast_id': 1, 'character': \"Savannah 'Vannah...   \n",
-       "4  [{'cast_id': 1, 'character': 'George Banks', '...   \n",
-       "\n",
-       "                                                crew  \\\n",
-       "0  [{'credit_id': '52fe4284c3a36847f8024f49', 'de...   \n",
-       "1  [{'credit_id': '52fe44bfc3a36847f80a7cd1', 'de...   \n",
-       "2  [{'credit_id': '52fe466a9251416c75077a89', 'de...   \n",
-       "3  [{'credit_id': '52fe44779251416c91011acb', 'de...   \n",
-       "4  [{'credit_id': '52fe44959251416c75039ed7', 'de...   \n",
-       "\n",
-       "                                            keywords  \\\n",
-       "0  [{'id': 931, 'name': 'jealousy'}, {'id': 4290,...   \n",
-       "1  [{'id': 10090, 'name': 'board game'}, {'id': 1...   \n",
-       "2  [{'id': 1495, 'name': 'fishing'}, {'id': 12392...   \n",
-       "3  [{'id': 818, 'name': 'based on novel'}, {'id':...   \n",
-       "4  [{'id': 1009, 'name': 'baby'}, {'id': 1599, 'n...   \n",
-       "\n",
-       "                            Imdb Link IMDB Score                       Genre  \\\n",
-       "0  http://www.imdb.com/title/tt114709        8.3  Animation|Adventure|Comedy   \n",
-       "1  http://www.imdb.com/title/tt113497        6.9     Action|Adventure|Family   \n",
-       "2  http://www.imdb.com/title/tt113228        6.6              Comedy|Romance   \n",
-       "3  http://www.imdb.com/title/tt114885        5.7        Comedy|Drama|Romance   \n",
-       "4  http://www.imdb.com/title/tt113041        5.9       Comedy|Family|Romance   \n",
-       "\n",
-       "          director                          actors  \\\n",
-       "0    John Lasseter             Tom Hanks|Tim Allen   \n",
-       "1     Joe Johnston    Robin Williams|Jonathan Hyde   \n",
-       "2    Howard Deutch      Walter Matthau|Jack Lemmon   \n",
-       "3  Forest Whitaker  Whitney Houston|Angela Bassett   \n",
-       "4    Charles Shyer       Steve Martin|Diane Keaton   \n",
-       "\n",
-       "                                   companies  \n",
-       "0                    Pixar Animation Studios  \n",
-       "1              TriStar Pictures|Teitler Film  \n",
-       "2                Warner Bros.|Lancaster Gate  \n",
-       "3     Twentieth Century Fox Film Corporation  \n",
-       "4  Sandollar Productions|Touchstone Pictures  \n",
-       "\n",
-       "[5 rows x 28 columns]"
-      ],
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>adult</th>\n",
-       "      <th>budget</th>\n",
-       "      <th>genres</th>\n",
-       "      <th>id</th>\n",
-       "      <th>imdb_id</th>\n",
-       "      <th>original_language</th>\n",
-       "      <th>overview</th>\n",
-       "      <th>popularity</th>\n",
-       "      <th>production_companies</th>\n",
-       "      <th>production_countries</th>\n",
-       "      <th>...</th>\n",
-       "      <th>vote_count</th>\n",
-       "      <th>cast</th>\n",
-       "      <th>crew</th>\n",
-       "      <th>keywords</th>\n",
-       "      <th>Imdb Link</th>\n",
-       "      <th>IMDB Score</th>\n",
-       "      <th>Genre</th>\n",
-       "      <th>director</th>\n",
-       "      <th>actors</th>\n",
-       "      <th>companies</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>False</td>\n",
-       "      <td>30000000</td>\n",
-       "      <td>[{'id': 16, 'name': 'Animation'}, {'id': 35, '...</td>\n",
-       "      <td>862</td>\n",
-       "      <td>114709</td>\n",
-       "      <td>en</td>\n",
-       "      <td>Led by Woody, Andy's toys live happily in his ...</td>\n",
-       "      <td>21.946943</td>\n",
-       "      <td>[{'name': 'Pixar Animation Studios', 'id': 3}]</td>\n",
-       "      <td>[{'iso_3166_1': 'US', 'name': 'United States o...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>5415.0</td>\n",
-       "      <td>[{'cast_id': 14, 'character': 'Woody (voice)',...</td>\n",
-       "      <td>[{'credit_id': '52fe4284c3a36847f8024f49', 'de...</td>\n",
-       "      <td>[{'id': 931, 'name': 'jealousy'}, {'id': 4290,...</td>\n",
-       "      <td>http://www.imdb.com/title/tt114709</td>\n",
-       "      <td>8.3</td>\n",
-       "      <td>Animation|Adventure|Comedy</td>\n",
-       "      <td>John Lasseter</td>\n",
-       "      <td>Tom Hanks|Tim Allen</td>\n",
-       "      <td>Pixar Animation Studios</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>False</td>\n",
-       "      <td>65000000</td>\n",
-       "      <td>[{'id': 12, 'name': 'Adventure'}, {'id': 14, '...</td>\n",
-       "      <td>8844</td>\n",
-       "      <td>113497</td>\n",
-       "      <td>en</td>\n",
-       "      <td>When siblings Judy and Peter discover an encha...</td>\n",
-       "      <td>17.015539</td>\n",
-       "      <td>[{'name': 'TriStar Pictures', 'id': 559}, {'na...</td>\n",
-       "      <td>[{'iso_3166_1': 'US', 'name': 'United States o...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2413.0</td>\n",
-       "      <td>[{'cast_id': 1, 'character': 'Alan Parrish', '...</td>\n",
-       "      <td>[{'credit_id': '52fe44bfc3a36847f80a7cd1', 'de...</td>\n",
-       "      <td>[{'id': 10090, 'name': 'board game'}, {'id': 1...</td>\n",
-       "      <td>http://www.imdb.com/title/tt113497</td>\n",
-       "      <td>6.9</td>\n",
-       "      <td>Action|Adventure|Family</td>\n",
-       "      <td>Joe Johnston</td>\n",
-       "      <td>Robin Williams|Jonathan Hyde</td>\n",
-       "      <td>TriStar Pictures|Teitler Film</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>False</td>\n",
-       "      <td>0</td>\n",
-       "      <td>[{'id': 10749, 'name': 'Romance'}, {'id': 35, ...</td>\n",
-       "      <td>15602</td>\n",
-       "      <td>113228</td>\n",
-       "      <td>en</td>\n",
-       "      <td>A family wedding reignites the ancient feud be...</td>\n",
-       "      <td>11.712900</td>\n",
-       "      <td>[{'name': 'Warner Bros.', 'id': 6194}, {'name'...</td>\n",
-       "      <td>[{'iso_3166_1': 'US', 'name': 'United States o...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>92.0</td>\n",
-       "      <td>[{'cast_id': 2, 'character': 'Max Goldman', 'c...</td>\n",
-       "      <td>[{'credit_id': '52fe466a9251416c75077a89', 'de...</td>\n",
-       "      <td>[{'id': 1495, 'name': 'fishing'}, {'id': 12392...</td>\n",
-       "      <td>http://www.imdb.com/title/tt113228</td>\n",
-       "      <td>6.6</td>\n",
-       "      <td>Comedy|Romance</td>\n",
-       "      <td>Howard Deutch</td>\n",
-       "      <td>Walter Matthau|Jack Lemmon</td>\n",
-       "      <td>Warner Bros.|Lancaster Gate</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>False</td>\n",
-       "      <td>16000000</td>\n",
-       "      <td>[{'id': 35, 'name': 'Comedy'}, {'id': 18, 'nam...</td>\n",
-       "      <td>31357</td>\n",
-       "      <td>114885</td>\n",
-       "      <td>en</td>\n",
-       "      <td>Cheated on, mistreated and stepped on, the wom...</td>\n",
-       "      <td>3.859495</td>\n",
-       "      <td>[{'name': 'Twentieth Century Fox Film Corporat...</td>\n",
-       "      <td>[{'iso_3166_1': 'US', 'name': 'United States o...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>34.0</td>\n",
-       "      <td>[{'cast_id': 1, 'character': \"Savannah 'Vannah...</td>\n",
-       "      <td>[{'credit_id': '52fe44779251416c91011acb', 'de...</td>\n",
-       "      <td>[{'id': 818, 'name': 'based on novel'}, {'id':...</td>\n",
-       "      <td>http://www.imdb.com/title/tt114885</td>\n",
-       "      <td>5.7</td>\n",
-       "      <td>Comedy|Drama|Romance</td>\n",
-       "      <td>Forest Whitaker</td>\n",
-       "      <td>Whitney Houston|Angela Bassett</td>\n",
-       "      <td>Twentieth Century Fox Film Corporation</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>False</td>\n",
-       "      <td>0</td>\n",
-       "      <td>[{'id': 35, 'name': 'Comedy'}]</td>\n",
-       "      <td>11862</td>\n",
-       "      <td>113041</td>\n",
-       "      <td>en</td>\n",
-       "      <td>Just when George Banks has recovered from his ...</td>\n",
-       "      <td>8.387519</td>\n",
-       "      <td>[{'name': 'Sandollar Productions', 'id': 5842}...</td>\n",
-       "      <td>[{'iso_3166_1': 'US', 'name': 'United States o...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>173.0</td>\n",
-       "      <td>[{'cast_id': 1, 'character': 'George Banks', '...</td>\n",
-       "      <td>[{'credit_id': '52fe44959251416c75039ed7', 'de...</td>\n",
-       "      <td>[{'id': 1009, 'name': 'baby'}, {'id': 1599, 'n...</td>\n",
-       "      <td>http://www.imdb.com/title/tt113041</td>\n",
-       "      <td>5.9</td>\n",
-       "      <td>Comedy|Family|Romance</td>\n",
-       "      <td>Charles Shyer</td>\n",
-       "      <td>Steve Martin|Diane Keaton</td>\n",
-       "      <td>Sandollar Productions|Touchstone Pictures</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 28 columns</p>\n",
-       "</div>"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 17
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
@@ -798,7 +542,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "source": [
-    "train_data = pd.read_csv('../data/train_final.csv')\n",
+    "# train_data = pd.read_csv('../data/train_final.csv')\n",
     "# valid_data = pd.read_csv('../data/valid_final.csv')\n",
     "# test_data = pd.read_csv('../data/test_final.csv')"
    ],
