--- a/src/preprocessing.ipynb
+++ b/src/preprocessing.ipynb
@@ -10,12 +10,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.11"
   },
   "orig_nbformat": 2,
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.7.3 64-bit ('base': conda)"
+   "display_name": "Python 3.7.11 64-bit ('base': conda)"
   },
   "interpreter": {
    "hash": "44e4baef8aa2bfdee458aa519960f936f36d6c605b940cfa7e03f66b68608407"
@@ -26,7 +26,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "source": [
     "# first database\n",
     "movie_genre = pd.read_csv(\"../data/movieGenres/MovieGenre.csv\", encoding=\"latin1\")\n",
@@ -73,8 +73,8 @@
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "/home/shone/anaconda3/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3049: DtypeWarning: Columns (10) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  interactivity=interactivity, compiler=compiler, result=result)\n"
+      "/home/shone/anaconda3/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3437: DtypeWarning: Columns (10) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "  exec(code_obj, self.user_global_ns, self.user_ns)\n"
      ]
     }
    ],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "source": [
     "# we need to rename column imdbId so it matches column name from movies_metadata.csv, for later join\n",
     "cleaned_movie_genre = movie_genre.rename(columns={'imdbId': 'imdb_id'})\n",
@@ -142,10 +142,39 @@
     "prepared_data.drop('original_title', 1, inplace=True)\n",
     "prepared_data.drop('Title', 1, inplace=True)\n",
     "print(prepared_data.shape)\n",
-    "prepared_data.to_csv('../data/preprocessed_data_2.csv', index=False)\n",
     "# data_preparation.head()"
    ],
    "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "We will filter english movies that are released after 1970."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "source": [
+    "prepared_data = prepared_data[prepared_data.original_language == 'en']\n",
+    "pd.to_datetime(prepared_data.release_date)\n",
+    "prepared_data['year'] = pd.DatetimeIndex(prepared_data['release_date']).year\n",
+    "prepared_data = prepared_data.loc[prepared_data.year > 1970]\n",
+    "print(prepared_data.shape)\n",
+    "\n",
+    "prepared_data.to_csv('../data/preprocessed_data_2.csv', index=False)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "(21567, 26)\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
@@ -157,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "source": [
     "def get_director(crew):\n",
     "    for director in crew:\n",
@@ -203,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "source": [
     "included_columns = ['IMDB Score', 'overview', 'Genre', 'actors', 'runtime', 'director', 'budget', 'companies']\n",
     "preprocessed_data_3 = pd.read_csv('../data/preprocessed_data_3.csv')\n",
@@ -218,8 +247,8 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "(37502, 8)\n",
-      "(27382, 8)\n"
+      "(21567, 8)\n",
+      "(15041, 8)\n"
      ]
     },
     {
@@ -338,14 +367,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 3
+     "execution_count": 7
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "source": [
     "def get_words(message, tokenizer = None):\n",
     "    if tokenizer:\n",
@@ -399,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "source": [
     "train_dataset, test_dataset = train_test_split(data_to_use, test_size=0.3, random_state = 0)\n",
     "valid_dataset, test_dataset = train_test_split(test_dataset, test_size=0.5, random_state = 0)\n",
@@ -421,9 +450,9 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "(19167, 8)\n",
-      "(4107, 8)\n",
-      "(4108, 8)\n"
+      "(10528, 8)\n",
+      "(2256, 8)\n",
+      "(2257, 8)\n"
      ]
     }
    ],
@@ -438,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "source": [
     "train_data = pd.read_csv('../data/train.csv')\n",
     "\n",
@@ -470,22 +499,14 @@
     "test_overview_matrix = transform_text(test_data['overview'].astype(str).values, overview_dictionary)\n",
     "\n"
    ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Size of dictionary:  4953\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "metadata": {
     "tags": []
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "source": [
     "train_data = pd.concat([train_data, pd.DataFrame(train_genre_matrix, columns = genre_dictionary.keys()), \n",
     "                                    pd.DataFrame(train_director_matrix, columns=director_dictionary.keys()), \n",
@@ -501,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "source": [
     "valid_data = pd.concat([valid_data, pd.DataFrame(valid_genre_matrix, columns = genre_dictionary.keys()), \n",
     "                                    pd.DataFrame(valid_director_matrix, columns=director_dictionary.keys()), \n",
@@ -517,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "source": [
     "test_data = pd.concat([test_data,   pd.DataFrame(test_genre_matrix, columns = genre_dictionary.keys()), \n",
     "                                    pd.DataFrame(test_director_matrix, columns=director_dictionary.keys()), \n",
@@ -551,19 +572,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "source": [
-    "# import sys\n",
+    "import sys\n",
     "\n",
-    "# orig_stdout = sys.stdout\n",
-    "# f = open('out.txt', 'w')\n",
-    "# sys.stdout = f\n",
+    "orig_stdout = sys.stdout\n",
+    "f = open('columns.txt', 'w')\n",
+    "sys.stdout = f\n",
     "\n",
-    "# for col in train_data.columns:\n",
-    "#     print(col)\n",
+    "for col in train_data.columns:\n",
+    "    print(col)\n",
     "\n",
-    "# sys.stdout = orig_stdout\n",
-    "# f.close()\n"
+    "sys.stdout = orig_stdout\n",
+    "f.close()\n"
    ],
    "outputs": [],
    "metadata": {}
