--- a/src/preprocessing.ipynb
+++ b/src/preprocessing.ipynb
@@ -34,14 +34,14 @@
     "from sklearn.model_selection import train_test_split\n",
     "import os\n",
     "import spacy\n",
-    "import en_core_web_sm\n"
+    "import en_core_web_sm"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "source": [
     "# first database\n",
     "movie_genre = pd.read_csv(\"../data/movieGenres/MovieGenre.csv\", encoding=\"latin1\")\n",
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "source": [
     "# we need to rename column imdbId so it matches column name from movies_metadata.csv, for later join\n",
     "cleaned_movie_genre = movie_genre.rename(columns={'imdbId': 'imdb_id'})\n",
@@ -431,18 +431,18 @@
    "execution_count": 9,
    "source": [
     "train_dataset, test_dataset = train_test_split(data_to_use, test_size=0.3, random_state = 0)\n",
-    "valid_dataset, test_dataset = train_test_split(test_dataset, test_size=0.5, random_state = 0)\n",
+    "# valid_dataset, test_dataset = train_test_split(test_dataset, test_size=0.5, random_state = 0)\n",
     "\n",
     "train_data = train_dataset.reset_index(drop=True)\n",
-    "valid_data = valid_dataset.reset_index(drop=True)\n",
+    "# valid_data = valid_dataset.reset_index(drop=True)\n",
     "test_data = test_dataset.reset_index(drop=True)\n",
     "\n",
     "print(train_data.shape)\n",
-    "print(valid_data.shape)\n",
+    "# print(valid_data.shape)\n",
     "print(test_data.shape)\n",
     "\n",
     "train_data.to_csv('../data/train.csv', index = False)\n",
-    "valid_data.to_csv('../data/valid.csv', index = False)\n",
+    "# valid_data.to_csv('../data/valid.csv', index = False)\n",
     "test_data.to_csv('../data/test.csv', index = False)"
    ],
    "outputs": [
@@ -451,8 +451,7 @@
      "name": "stdout",
      "text": [
       "(10528, 8)\n",
-      "(2256, 8)\n",
-      "(2257, 8)\n"
+      "(4513, 8)\n"
      ]
     }
    ],
@@ -473,29 +472,29 @@
     "\n",
     "genre_dictionary = create_dictionary(train_data['Genre'].astype(str).values, min_count=5)\n",
     "train_genre_matrix = transform_text(train_data['Genre'].astype(str).values, genre_dictionary)\n",
-    "valid_genre_matrix = transform_text(valid_data['Genre'].astype(str).values, genre_dictionary)\n",
+    "# valid_genre_matrix = transform_text(valid_data['Genre'].astype(str).values, genre_dictionary)\n",
     "test_genre_matrix = transform_text(test_data['Genre'].astype(str).values, genre_dictionary)\n",
     "\n",
     "director_dictionary = create_dictionary(train_data['director'].astype(str).values, min_count=5)\n",
     "train_director_matrix = transform_text(train_data['director'].astype(str).values, director_dictionary)\n",
-    "valid_director_matrix = transform_text(valid_data['director'].astype(str).values, director_dictionary)\n",
+    "# valid_director_matrix = transform_text(valid_data['director'].astype(str).values, director_dictionary)\n",
     "test_director_matrix = transform_text(test_data['director'].astype(str).values, director_dictionary)\n",
     "\n",
     "actors_dictionary = create_dictionary(train_data['actors'].astype(str).values, min_count = 5)\n",
     "train_actors_matrix = transform_text(train_data['actors'].astype(str).values, actors_dictionary)\n",
-    "valid_actors_matrix = transform_text(valid_data['actors'].astype(str).values, actors_dictionary)\n",
+    "# valid_actors_matrix = transform_text(valid_data['actors'].astype(str).values, actors_dictionary)\n",
     "test_actors_matrix = transform_text(test_data['actors'].astype(str).values, actors_dictionary)\n",
     "\n",
     "companies_dictionary = create_dictionary(train_data['companies'].astype(str).values, min_count=5)\n",
     "train_companies_matrix = transform_text(train_data['companies'].astype(str).values, companies_dictionary)\n",
-    "valid_companies_matrix = transform_text(valid_data['companies'].astype(str).values, companies_dictionary)\n",
+    "# valid_companies_matrix = transform_text(valid_data['companies'].astype(str).values, companies_dictionary)\n",
     "test_companies_matrix = transform_text(test_data['companies'].astype(str).values, companies_dictionary)\n",
     "\n",
     "tokenizer = en_core_web_sm.load(disable=[\"tagger\", \"parser\",\"ner\"])\n",
     "overview_dictionary = create_dictionary(train_data['overview'], min_count = 20, tokenizer=tokenizer)\n",
     "print('Size of dictionary: ', len(overview_dictionary))\n",
     "train_overview_matrix = transform_text(train_data['overview'].astype(str).values, overview_dictionary)\n",
-    "valid_overview_matrix = transform_text(valid_data['overview'].astype(str).values, overview_dictionary)\n",
+    "# valid_overview_matrix = transform_text(valid_data['overview'].astype(str).values, overview_dictionary)\n",
     "test_overview_matrix = transform_text(test_data['overview'].astype(str).values, overview_dictionary)\n",
     "\n"
    ],
@@ -524,14 +523,14 @@
    "cell_type": "code",
    "execution_count": 16,
    "source": [
-    "valid_data = pd.concat([valid_data, pd.DataFrame(valid_genre_matrix, columns = genre_dictionary.keys()), \n",
-    "                                    pd.DataFrame(valid_director_matrix, columns=director_dictionary.keys()), \n",
-    "                                    pd.DataFrame(valid_actors_matrix, columns = actors_dictionary.keys()),\n",
-    "                                    pd.DataFrame(valid_companies_matrix, columns = companies_dictionary.keys()),\n",
-    "                                    pd.DataFrame(valid_overview_matrix, columns = overview_dictionary.keys())], axis=1)\n",
+    "# valid_data = pd.concat([valid_data, pd.DataFrame(valid_genre_matrix, columns = genre_dictionary.keys()), \n",
+    "#                                     pd.DataFrame(valid_director_matrix, columns=director_dictionary.keys()), \n",
+    "#                                     pd.DataFrame(valid_actors_matrix, columns = actors_dictionary.keys()),\n",
+    "#                                     pd.DataFrame(valid_companies_matrix, columns = companies_dictionary.keys()),\n",
+    "#                                     pd.DataFrame(valid_overview_matrix, columns = overview_dictionary.keys())], axis=1)\n",
     "\n",
-    "valid_data.to_csv('../data/valid_final.csv', index = False)\n",
-    "# valid_data.head()"
+    "# valid_data.to_csv('../data/valid_final.csv', index = False)\n",
+    "# # valid_data.head()"
    ],
    "outputs": [],
    "metadata": {}
@@ -553,13 +552,6 @@
    "metadata": {}
   },
   {
-   "cell_type": "markdown",
-   "source": [
-    "Ucitavamo finalne podatke i radimo dalje"
-   ],
-   "metadata": {}
-  },
-  {
    "cell_type": "code",
    "execution_count": 3,
    "source": [
@@ -574,17 +566,17 @@
    "cell_type": "code",
    "execution_count": 18,
    "source": [
-    "import sys\n",
+    "# import sys\n",
     "\n",
-    "orig_stdout = sys.stdout\n",
-    "f = open('columns.txt', 'w')\n",
-    "sys.stdout = f\n",
+    "# orig_stdout = sys.stdout\n",
+    "# f = open('columns.txt', 'w')\n",
+    "# sys.stdout = f\n",
     "\n",
-    "for col in train_data.columns:\n",
-    "    print(col)\n",
+    "# for col in train_data.columns:\n",
+    "#     print(col)\n",
     "\n",
-    "sys.stdout = orig_stdout\n",
-    "f.close()\n"
+    "# sys.stdout = orig_stdout\n",
+    "# f.close()\n"
    ],
    "outputs": [],
    "metadata": {}
