--- a/src/regression.ipynb
+++ b/src/regression.ipynb
@@ -2,17 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import xgboost as xgb\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.metrics import mean_absolute_error\n",
+    "from sklearn.metrics import mean_absolute_percentage_error\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.linear_model import Ridge\n",
     "from sklearn.linear_model import Lasso\n",
-    "from sklearn.ensemble import RandomForestRegressor"
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.model_selection import GridSearchCV"
    ],
    "outputs": [],
    "metadata": {}
@@ -46,21 +49,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "source": [
-    "linearRegression = LinearRegression().fit(train_X, train_data['IMDB Score'])"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "source": [
-    "valid_data = pd.read_csv('../data/valid_final.csv')\n",
-    "valid_data = valid_data.drop(columns = ['Genre', 'actors', 'director', 'companies', 'overview'])\n",
-    "valid_X = valid_data.drop(columns=['IMDB Score'])\n",
-    "print(np.cov(valid_data['IMDB Score']))"
+    "# valid_data = pd.read_csv('../data/valid_final.csv')\n",
+    "# valid_data = valid_data.drop(columns = ['Genre', 'actors', 'director', 'companies', 'overview'])\n",
+    "# valid_X = valid_data.drop(columns=['IMDB Score'])\n",
+    "# print(np.cov(valid_data['IMDB Score']))"
    ],
    "outputs": [
     {
@@ -75,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "source": [
     "test_data = pd.read_csv('../data/test_final.csv')\n",
     "test_data = test_data.drop(columns = ['Genre', 'actors', 'director', 'companies', 'overview'])\n",
@@ -87,7 +81,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "1.414101153385683\n"
+      "1.3698599720979419\n"
      ]
     }
    ],
@@ -95,15 +89,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
+   "source": [
+    "# linearRegression = GridSearchCV(estimator=LinearRegression(), param_grid={\"intercept\": [True, False]}, scoring=metrika , cv=30) ?\n",
+    "linearRegression = LinearRegression().fit(train_X, train_data['IMDB Score'])"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "source": [
     "print('train R^2: ', linearRegression.score(train_X, train_data['IMDB Score']))\n",
+    "print('train MAE: ', mean_absolute_error(linearRegression.predict(train_X), train_data['IMDB Score']))\n",
     "print('train MSE: ', mean_squared_error(linearRegression.predict(train_X), train_data['IMDB Score']))\n",
     "\n",
-    "print('valid R^2: ', linearRegression.score(valid_X, valid_data['IMDB Score']))\n",
-    "print('valid MSE: ', mean_squared_error(linearRegression.predict(valid_X), valid_data['IMDB Score']))\n",
+    "# print('valid R^2: ', linearRegression.score(valid_X, valid_data['IMDB Score']))\n",
+    "# print('valid MSE: ', mean_squared_error(linearRegression.predict(valid_X), valid_data['IMDB Score']))\n",
     "\n",
     "print('test R^2: ', linearRegression.score(test_X, test_data['IMDB Score']))\n",
+    "print('train MAE: ', mean_absolute_error(linearRegression.predict(test_X), test_data['IMDB Score']))\n",
     "print('test MSE: ', mean_squared_error(linearRegression.predict(test_X), test_data['IMDB Score']))"
    ],
    "outputs": [
@@ -112,11 +118,11 @@
      "name": "stdout",
      "text": [
       "train R^2:  0.5469532634174328\n",
+      "train MAE:  0.6031675024259086\n",
       "train MSE:  0.6228400675303715\n",
-      "valid R^2:  0.33065725162122017\n",
-      "valid MSE:  0.887272292036871\n",
-      "test R^2:  0.39043569951562773\n",
-      "test MSE:  0.8616036638600203\n"
+      "test R^2:  0.3615194589066031\n",
+      "train MAE:  0.7248295216204385\n",
+      "test MSE:  0.874435134094227\n"
      ]
     }
    ],
@@ -131,17 +137,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "source": [
     "ridgeRegression = Ridge(alpha = 10, random_state = 0).fit(train_X, train_data['IMDB Score'])\n",
     "\n",
     "print('Train R^2: ', ridgeRegression.score(train_X, train_data['IMDB Score']))\n",
+    "print('Train MAE: ', mean_absolute_error(ridgeRegression.predict(train_X), train_data['IMDB Score']))\n",
     "print('Train MSE: ', mean_squared_error(ridgeRegression.predict(train_X), train_data['IMDB Score']))\n",
     "\n",
-    "print('Valid R^2: ', ridgeRegression.score(valid_X, valid_data['IMDB Score']))\n",
-    "print('Valid MSE: ', mean_squared_error(ridgeRegression.predict(valid_X), valid_data['IMDB Score']))\n",
+    "# print('Valid R^2: ', ridgeRegression.score(valid_X, valid_data['IMDB Score']))\n",
+    "# print('Valid MSE: ', mean_squared_error(ridgeRegression.predict(valid_X), valid_data['IMDB Score']))\n",
     "\n",
     "print('Test R^2: ', ridgeRegression.score(test_X, test_data['IMDB Score']))\n",
+    "print('Test MAE: ', mean_absolute_error(ridgeRegression.predict(test_X), test_data['IMDB Score']))\n",
     "print('Test MSE: ', mean_squared_error(ridgeRegression.predict(test_X), test_data['IMDB Score']))"
    ],
    "outputs": [
@@ -158,11 +166,11 @@
      "name": "stdout",
      "text": [
       "Train R^2:  0.48793680117999016\n",
+      "Train MAE:  0.6442418633803632\n",
       "Train MSE:  0.7039747813628666\n",
-      "Valid R^2:  0.38000891514357293\n",
-      "Valid MSE:  0.8218523502874899\n",
-      "Test R^2:  0.4206076557362177\n",
-      "Test MSE:  0.8189563697110235\n"
+      "Test R^2:  0.4009709875454338\n",
+      "Test MAE:  0.6959039923099868\n",
+      "Test MSE:  0.8204040391505335\n"
      ]
     }
    ],
@@ -177,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "source": [
     "lassoRegression = Lasso(alpha=0.01, random_state=0).fit(train_X, train_data['IMDB Score'])"
    ],
@@ -186,15 +194,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "source": [
     "print('train R^2: ', lassoRegression.score(train_X, train_data['IMDB Score']))\n",
+    "print('train MAE: ', mean_absolute_error(lassoRegression.predict(train_X), train_data['IMDB Score']))\n",
     "print('train MSE: ', mean_squared_error(lassoRegression.predict(train_X), train_data['IMDB Score']))\n",
     "\n",
-    "print('valid R^2: ', lassoRegression.score(valid_X, valid_data['IMDB Score']))\n",
-    "print('valid MSE: ', mean_squared_error(lassoRegression.predict(valid_X), valid_data['IMDB Score']))\n",
+    "# print('valid R^2: ', lassoRegression.score(valid_X, valid_data['IMDB Score']))\n",
+    "# print('valid MSE: ', mean_squared_error(lassoRegression.predict(valid_X), valid_data['IMDB Score']))\n",
     "\n",
     "print('test R^2: ', lassoRegression.score(test_X, test_data['IMDB Score']))\n",
+    "print('test MAE: ', mean_absolute_error(lassoRegression.predict(test_X), test_data['IMDB Score']))\n",
     "print('test MSE: ', mean_squared_error(lassoRegression.predict(test_X), test_data['IMDB Score']))"
    ],
    "outputs": [
@@ -203,11 +213,11 @@
      "name": "stdout",
      "text": [
       "train R^2:  0.3067452704795627\n",
+      "train MAE:  0.7552564534961796\n",
       "train MSE:  0.9530734639152751\n",
-      "valid R^2:  0.2895895694776629\n",
-      "valid MSE:  0.9417110927147195\n",
-      "test R^2:  0.31754828099803056\n",
-      "test MSE:  0.9646281795578034\n"
+      "test R^2:  0.304028552361731\n",
+      "test MAE:  0.752210485497123\n",
+      "test MSE:  0.953172175144332\n"
      ]
     }
    ],
@@ -222,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "source": [
     "RandomForestReg = RandomForestRegressor(n_estimators=100, max_depth=32).fit(train_X, train_data['IMDB Score'])"
    ],
@@ -234,12 +244,14 @@
    "execution_count": 11,
    "source": [
     "print('train R^2: ', RandomForestReg.score(train_X, train_data['IMDB Score']))\n",
+    "print('train MAE: ', mean_absolute_error(RandomForestReg.predict(train_X), train_data['IMDB Score']))\n",
     "print('train MSE: ', mean_squared_error(RandomForestReg.predict(train_X), train_data['IMDB Score']))\n",
     "\n",
-    "print('valid R^2: ', RandomForestReg.score(valid_X, valid_data['IMDB Score']))\n",
-    "print('valid MSE: ', mean_squared_error(RandomForestReg.predict(valid_X), valid_data['IMDB Score']))\n",
+    "# print('valid R^2: ', RandomForestReg.score(valid_X, valid_data['IMDB Score']))\n",
+    "# print('valid MSE: ', mean_squared_error(RandomForestReg.predict(valid_X), valid_data['IMDB Score']))\n",
     "\n",
     "print('test R^2: ', RandomForestReg.score(test_X, test_data['IMDB Score']))\n",
+    "print('test MAE: ', mean_absolute_error(RandomForestReg.predict(test_X), test_data['IMDB Score']))\n",
     "print('test MSE: ', mean_squared_error(RandomForestReg.predict(test_X), test_data['IMDB Score']))"
    ],
    "outputs": [
@@ -303,7 +315,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# XGBoost (eXreme Gradient Boosting)"
+    "# XGBoost (eXtreme Gradient Boosting)"
    ],
    "metadata": {}
   },
@@ -321,12 +333,14 @@
    "execution_count": 14,
    "source": [
     "print('train R^2: ', xgbRegression.score(train_X, train_data['IMDB Score']))\n",
+    "print('train MAE: ', mean_absolute_error(xgbRegression.predict(train_X), train_data['IMDB Score']))\n",
     "print('train MSE: ', mean_squared_error(xgbRegression.predict(train_X), train_data['IMDB Score']))\n",
     "\n",
-    "print('valid R^2: ', xgbRegression.score(valid_X, valid_data['IMDB Score']))\n",
-    "print('valid MSE: ', mean_squared_error(xgbRegression.predict(valid_X), valid_data['IMDB Score']))\n",
+    "# print('valid R^2: ', xgbRegression.score(valid_X, valid_data['IMDB Score']))\n",
+    "# print('valid MSE: ', mean_squared_error(xgbRegression.predict(valid_X), valid_data['IMDB Score']))\n",
     "\n",
     "print('test R^2: ', xgbRegression.score(test_X, test_data['IMDB Score']))\n",
+    "print('test MAE: ', mean_absolute_error(xgbRegression.predict(test_X), test_data['IMDB Score']))\n",
     "print('test MSE: ', mean_squared_error(xgbRegression.predict(test_X), test_data['IMDB Score']))"
    ],
    "outputs": [
